Fix alignment issues and add pointer cursor to select drop down items

--- a/src/components/ForecastWeather/ForecastWeather.css
+++ b/src/components/ForecastWeather/ForecastWeather.css
@@ -133,7 +133,7 @@
 
 @media only screen and (min-width : 1200px) {
   .forecast-weather {
-    padding: 1em;
+    padding: 1em 0;
   }
 
   .forecast-weather-day {
