--- a/src/components/FullForecast/FullForecast.css
+++ b/src/components/FullForecast/FullForecast.css
@@ -9,6 +9,7 @@
 	.weather-forecasts {
 		display: flex;
     flex-wrap: wrap;
+    margin: 1em;
 	}
 }
 
