--- a/src/components/HourlyWeather/HourlyWeather.css
+++ b/src/components/HourlyWeather/HourlyWeather.css
@@ -43,7 +43,7 @@
 }
 
 .forecast-hourly-icon {
-	
+	max-width: 80%;
 }
 
 .forecast-hourly-description {
